Fix swagger auth documentation
